--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,12 @@
     <div class="container">
       <div class="row justify-content-start mt-md-2">
         <% flash.each do |type, msg| %>
-          <div class="alert alert-<%= type == 'alert' ? 'danger' : 'info' %> alert-dismissible col-md-3" role="alert">
-            <%= msg %>
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-          </div>
+          <% unless msg.blank? %>
+            <div class="alert alert-<%= type == 'alert' ? 'danger' : 'info' %> alert-dismissible col-md-3" role="alert">
+              <%= msg %>
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+          <% end %>
         <% end %>
       </div>
     </div>
