Implement views for accounts, partial views

--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -1,22 +1,18 @@
 <div id="<%= dom_id account %>">
   <p>
-    <strong>Type:</strong>
-    <%= account.type %>
+    <strong>Account Type:</strong>
+    <%= account.account_type %>
   </p>
-
   <p>
     <strong>Balance:</strong>
     <%= account.balance %>
   </p>
-
   <p>
     <strong>Currency:</strong>
     <%= account.currency %>
   </p>
-
   <p>
     <strong>User:</strong>
     <%= account.user_id %>
   </p>
-
 </div>
