--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -3,11 +3,13 @@
   <div class="row justify-content-between align-items-center">
     <div class="col text-start">
       <h2 class="h2"><%= @account.user.fullname %></h2>
-      <p class="h4 fw-bold mt-2"><%= @account.account_type.capitalize %> account</p>
+      <p class="h4 fw-bold mt-2"><%= t('views.account.type', type: account_type_i18n(@account.account_type)) %></p>
     </div>
     <div class="col text-end">
-      <p class="h2">Account #<%= @account.id %></p>
-      <p class="h4 fw-bold mt-2">Total: <%= "#{@account.balance}#{currency_to_symbol(@account.currency)}" %></p>
+      <p class="h2"><%= t('views.account.number', number: @account.id) %></p>
+      <p class="h4 fw-bold mt-2">
+        <%= t('views.account.show.total', balance: @account.balance, currency: currency_to_symbol(@account.currency)) %>
+      </p>
     </div>
   </div>
 </div>
