Implement transaction models and views

--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id transaction %>" class="card shadow border-success">
+<div id="<%= dom_id account %>" class="card shadow border-success">
   <div class="card-body text-center">
     <div class="card-title">
       <p class="h3">
