--- a/app/views/transactions/_transaction.html.erb
+++ b/app/views/transactions/_transaction.html.erb
@@ -1,17 +1,17 @@
-<div id="<%= dom_id transaction %>" class="container shadow border border-light">
-  <div class="row justify-content-between align-items-center p-1">
-    <div class="col">
-      <p class="h3"><%= transaction.recipient.fullname %></p>
-      <p class="text-muted"><%= transaction.created_at %></p>
+<%= link_to transaction, id: dom_id(transaction), data: { turbo_frame: 'modal' },
+                         class: 'list-group-item list-group-item-action container' do %>
+  <div class="row">
+    <div class="col-4">
+      <p class="lh-1 h3"><%= transaction.recipient %></p>
+      <small class="text-muted"><%= transaction.created_at.strftime("%a %b %Y - %H:%M") %></small>
     </div>
-    <div class="col-3">
-      <p class="h2">
-        <%= "#{transaction.amount} #{currency_to_symbol(transaction.sender.currency)}" %>
+    <div class="col d-flex mt-2 justify-content-center">
+      <p class="text-muted text-center">
+        <%= t("activerecord.attributes.transaction.status.#{transaction.status}") %>
       </p>
-      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-clockwise" viewBox="0 0 16 16">
-        <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2z"/>
-        <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466"/>
-      </svg>
+    </div>
+    <div class="col-4 d-flex justify-content-end">
+      <p class="h2"><%= "#{transaction.amount} #{currency_to_symbol(transaction.sender.currency)}" %></p>
     </div>
   </div>
-</div>
+<% end %>
