FMove shadow class to card instead of card body

--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="row justify-content-center align-items-center min-vh-100">
     <div class="col-12 col-sm-8 col-md-6 col-lg-5 mx-auto">
-      <div class="card">
-        <div class="card-body shadow">
+      <div class="card shadow">
+        <div class="card-body">
           <div class="text-center mb-3">
             <%= image_tag 'afbank-logo.png', alt: 'bank-logo', width: 200, height: 70 %>
             <h3 class="h3 mt-4"><%= t('views.devise.passwords.edit.title') %></h3>
