--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -3,12 +3,16 @@
   <div class="row justify-content-between align-items-center">
     <div class="col text-start">
       <h2 class="h2"><%= @account.user.fullname %></h2>
-      <p class="h4 fw-bold mt-2"><%= t('views.account.type', type: account_type_i18n(@account.account_type)) %></p>
+      <p class="h4 fw-bold mt-2">
+        <%= t('views.account.type',
+              type: t("activerecord.attributes.account.type.#{@account.account_type.downcase}")
+            ) %>
+      </p>
     </div>
     <div class="col text-end">
       <p class="h2"><%= t('views.account.number', number: @account.id) %></p>
       <p class="h4 fw-bold mt-2">
-        <%= t('views.account.show.total', balance: @account.balance, currency: currency_to_symbol(@account.currency)) %>
+        <%= t('views.account.show.total', balance: money_with_currency(@account.balance, @account.currency)) %>
       </p>
     </div>
   </div>
