--- a/app/views/transactions/show.html.erb
+++ b/app/views/transactions/show.html.erb
@@ -1,44 +1,3 @@
 <%= turbo_frame_tag 'modal' do %>
-  <div class="container fixed-top mt-3">
-    <div class="row justify-content-center min-vh-100">
-      <div class="col-md-4">
-        <div class="card shadow">
-          <%= image_for_transaction_status(@transaction.status) %>
-          <div class="card-body">
-            <h5 class="card-title text-center">
-              <%= t('views.transaction.show.title', number: @transaction.id) %>
-            </h5>
-            <ul class="list-group">
-              <li class="d-flex w-100 justify-content-between">
-                <p><%= t('views.transaction.show.status') %></p>
-                <p class="fw-bold"><%= t("activerecord.attributes.transaction.status.#{@transaction.status}") %></p>
-              </li>
-              <li class="d-flex w-100 justify-content-between">
-                <p><%= t('views.transaction.show.amount') %></p>
-                <p class="fw-bold"><%= "#{@transaction.amount} #{currency_to_symbol(@transaction.sender.currency)}" %></p>
-              </li>
-              <li class="d-flex w-100 justify-content-between">
-                <p><%= t('views.transaction.show.from_account') %></p>
-                <p class="fw-bold">#<%= @transaction.sender.id %></p>
-              </li>
-              <li class="d-flex w-100 justify-content-between">
-                <p><%= t('views.transaction.show.payed_to') %></p>
-                <p class="fw-bold"><%= @transaction.recipient %></p>
-              </li>
-              <li class="d-flex w-100 justify-content-between">
-                <p><%= t('views.transaction.show.date') %></p>
-                <p class="fw-bold"><%= @transaction.created_at.strftime("%a %b %Y - %H:%M") %></p>
-              </li>
-            </ul>
-            <%= link_to t('actions.back'), '#',
-                        class: 'card-link',
-                        data: {
-                          controller: 'modals',
-                          action: 'click->modals#close keydown.esc@document->modals#close'
-                        } %>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+  <%= render(TransactionCardComponent.new(transaction: @transaction)) %>
 <% end %>
