--- a/app/components/transaction_card_component.html.erb
+++ b/app/components/transaction_card_component.html.erb
@@ -1,4 +1,4 @@
-<div class="container fixed-top mt-3">
+<div class="container fixed-top mt-2 mt-sm-5">
   <div class="row justify-content-center min-vh-100">
     <div class="col-md-4">
       <div class="card shadow">
