--- a/app/views/transactions/_transaction.html.erb
+++ b/app/views/transactions/_transaction.html.erb
@@ -1,5 +1,5 @@
 <%= link_to transaction, id: dom_id(transaction), data: { turbo_frame: 'modal' },
-                         class: 'list-group-item list-group-item-action container' do %>
+                         class: 'list-group-item list-group-item-action container border-2' do %>
   <div class="row">
     <div class="col-4">
       <p class="lh-1 h3"><%= transaction.recipient %></p>
