Fix creation action not broadcasting to turbo stream

--- a/app/views/contacts/create.turbo_stream.erb
+++ b/app/views/contacts/create.turbo_stream.erb
@@ -1,4 +1,4 @@
-<%= turbo_stream.append 'turbo-contacts-table' do %>
+<%= turbo_stream.append 'contacts' do %>
   <%= render @contact %>
 <% end %>
 <!-- This will close the modal after submit -->
