--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,3 +1,4 @@
+<%= turbo_stream_from 'contacts' %>
 <div class="container">
   <div class="d-flex justify-content-end my-2">
     <%= link_to new_contact_path, class: 'btn btn-primary btn-lg d-flex align-items-center gap-1',
@@ -19,7 +20,7 @@
           <th></th>
         </tr>
       </thead>
-      <tbody id="turbo-contacts-table">
+      <tbody id="contacts">
         <% @contacts.each do |contact| %>
           <%= render contact %>
         <% end %>
