Add Transfer between account feature with async processing

--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -21,9 +21,7 @@
         </tr>
       </thead>
       <tbody id="contacts">
-        <% @contacts.each do |contact| %>
-          <%= render contact %>
-        <% end %>
+        <%= render @contacts %>
       </tbody>
     </table>
   </div>
